GNOME Bugzilla – Bug 688382
rtspsrc doesn't work with the interleaved protocols
Last modified: 2013-02-06 12:28:07 UTC
Run the following pipeline: gst-launch-1.0 -v rtspsrc location="rtspt://192.168.0.90:554" ! rtph264depay ! appsink Running this pipeline results in the critical message: GStreamer-CRITICAL **: gst_segment_to_running_time: assertion `segment->format == format' failed
Created attachment 229133 [details] GDB backtrace file
I've tried to remove the verification of the segment format in gst_segment_to_running_time function (there is no format check in the corresponding function in gstreamer 0.10). It mostly hangs (see the attached gdb_trace file).
commit 11cf4d4fd307671d679b263d7d5cefecb4284fa8 Author: Wim Taymans <wim.taymans@collabora.co.uk> Date: Fri Nov 16 13:31:04 2012 +0100 rtspsrc: create and add pads outside of lock Create and add the ghostpad for the new stream outside of the lock because it is not needed and causes deadlocks.
commit c28bfa89020f5642b3cf742806f04ca35f230814 Author: Wim Taymans <wim.taymans@collabora.co.uk> Date: Fri Nov 16 15:38:29 2012 +0100 rtspsrc: handle segment event Make a segment event when we send a new range header to a client (first PLAY request or after a seek). Send the segment event in interleaved mode. Clean the segment event on cleanup Fixes https://bugzilla.gnome.org/show_bug.cgi?id=688382
*** Bug 690632 has been marked as a duplicate of this bug. ***